Update access modifiers of interfaces and documentation. Remove unnecesary function in Pizza model and its test. Register services in Startup file.

--- a/GreatPizza/appsettings.json
+++ b/GreatPizza/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=GreatPizza;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
